--- a/style.css
+++ b/style.css
@@ -29,3 +29,24 @@ body
        margin: 10px;
        border-radius: 20px;
 }
+
+
+
+
+.container .card.imgbx{
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+
+}
+
+.container .card.imgbx img{
+       position: absolute;
+       top:0;
+       left:0;
+       width:100%;
+       height:100%;
+
+}
