--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body
        align-items: center;
        justify-content: center;
 }
-.container .card{
+.container .cards{
        position: relative;
        width: 300px;
        height: 400px;
@@ -28,25 +28,36 @@ body
        #1d3548 30%, #1d3548);
        margin: 10px;
        border-radius: 20px;
+       overflow: hidden;
 }
 
 
 
 
-.container .card.imgbx{
+.container .cards .imgbx{
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
+       transition: 0.5s;
+       z-index: 10000;
+       transform-origin: top;
+       overflow: hidden;
+
 
 }
 
-.container .card.imgbx img{
+.container .cards .imgbx img{
        position: absolute;
        top:0;
        left:0;
        width:100%;
        height:100%;
-
+       object-fit: cover;
+       border-radius: 20px;
+       
+}
+.container .cards:hover .imgbx{
+       transform:translateY(30px) scale(0.5);
 }
