--- a/style.css
+++ b/style.css
@@ -44,8 +44,6 @@ body
        z-index: 10000;
        transform-origin: top;
        overflow: hidden;
-
-
 }
 
 .container .cards .imgbx img{
@@ -61,3 +59,104 @@ body
 .container .cards:hover .imgbx{
        transform:translateY(30px) scale(0.5);
 }
+
+/*----content----*/
+.container .cards .content{
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       display: flex;
+       justify-content: center;
+       align-items: flex-end;
+       padding-bottom: 30px;
+       transform: translateY(100%);
+       transition: 0.5s;
+}
+.container .cards:hover .content{
+       transform: translateY(0);
+}
+.container .cards .content .details{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       flex-direction: column;
+       text-align: center;
+}
+.container .cards .content .details h2{
+       font-size: 1.5em;
+       font-weight: 500;
+       color: #fff;
+
+}
+
+.container .cards .content .details h2 span{
+              font-size: 0.8em;
+              font-weight: 400;
+              color: #03a9f4;
+}
+
+.social-icon{
+       position: relative;
+       margin-top:5px;
+       display: flex;
+       
+}
+
+.social-icon li{ 
+       list-style: none;
+       margin: 4px;
+}
+
+.social-icon li a{
+       width: 45px;
+       height: 45px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       background: #294d69;
+       border-radius:50%;
+       color: #fff;
+       text-decoration: none;
+       font-size: 1.5em;
+       transition: 0.5s;
+       
+}
+
+.social-icon li a:hover{
+       transform: rotate(360deg);
+       background: #03a9f4;
+}
+
+
+/*-----responsive----*/
+@media only screen and (max-width:767px){
+       .container{
+              display:flex;
+              flex-direction:column;
+       }
+}
+
+@media only screen and (max-width:1024px){
+       .container{
+              display:flex;
+              flex-direction:column;
+       }
+
+       .cards{
+              margin-bottom: 10px;
+       }
+}
+
+
+
+
+
+
+
+
+
+
+
+       
